# medblip-ai-agent

./: .env.example  .gitignore  AGENTS.ko.md  AGENTS.md  Makefile  README.md  dockerignore  pr_body.md  pyproject.toml  test_medblip.py  test_prompts.py
.claude/agents/: streamlit-ai-agent-builder.md
app/: __init__.py  first_service.py  main.py  main.py.backup
app/agents/: __init__.py  admin_agent.py  admin_agent_old.py  admin_workflow.py  agent.py  conversation_manager.py  doctor_agent.py  multi_agent_orchestrator.py  radiology_agent.py  shared_state.py  supervisor_agent.py
app/agents/prompts/: admin_prompts.py  doctor_prompts.py  prompt.py  supervisor_prompts.py
app/core/: __init__.py  llm_factory.py  model_utils.py  observability.py
app/orchestrator/: agent.py  models.py  prompt.py  prompt_experimenter.py  radiology_agent.py
app/orchestrator/prompts/: prompt.py  prompt_loader.py
app/orchestrator/prompts/experiments/: orchestrator_v1.txt  orchestrator_v2.txt  radiology_v1.txt  radiology_v2.txt
app/tools/: medblip_tool.py
data/: sample_data1.txt  sample_data2.txt  sample_data3.txt  sample_data4.txt  sample_data5.txt
docker/: docker-compose.yaml  dockerfile
langfuse/: .env.example  README.md  docker-compose.yml
model/: config.json  generation_config.json
notebooks/: first_service.ipynb  make_orchestrator_agent.ipynb
vllm/: Dockerfile  docker-compose.yml  hf_token.example  instruction.md  vllm.ipynb
