[project]
name = "medical-data-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "katalria",email = "wawa0070@naver.com"}
]
readme = "README.md"
requires-python = "3.11.7"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.4,<0.7.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
